# tree-sitter-aesophia

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  bnf.txt  grammar.js  grammar_utils.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-aesophia.h  tree-sitter-aesophia.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_aesophia/: __init__.py  binding.c
bindings/rust/: ast.rs  build.rs  code_table.rs  cst.rs  lib.rs  tc.rs  tree_sitter_aesophia.rs
bindings/rust/ast/: ast.rs  cst_ast.rs  cst_parse.rs  display.rs  mod.rs
bindings/rust/ast/tests/good/: expr_application.aes  expr_int.aes  expr_op_simple.aes  includes.aes  lit_int.aes  pragmas.aes  qual_expr_application.aes  simple_contract.aes  simple_contract_block_open_inline.aes  usings.aes
bindings/rust/cst/: loc_info.rs
bindings/rust/tc/: error.rs  infer.rs  scope.rs  type_env.rs  type_table.rs  unify.rs  utype.rs
examples/: Calculator.aes  Test.aes  Types.aes  basic_contract.aes
queries/: folds.scm  highlights.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  indent_vec.h  node-types.json  parser.c  preamble.h  scanner.c  scanner.h  state.h
test/corpus/: .#if_mania.txt  contracts.txt  functions.txt  if-else-blocks  if-else-oneline.txt  if-else-semi.txt  if-if-else-block-left.txt  if-if-else-block-right.txt  if-if-else-inline.txt  if-simple-block  if-simple-inline.txt  polyvar-type-constructors.txt  type-bytes.txt
