[package]
name = "tree-sitter-aesophia"
description = "aesophia grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "aesophia"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-aesophia"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"
rust-sitter = "0.3.4"
serde_json = "1.0.0"
either = "1.9.0"
num-bigint = "0.4"
num-traits = "0.2"

[build-dependencies]
cc = "1.0"
rust-sitter-tool = "0.3.4"
